--- a/code/preprocessing.ipynb
+++ b/code/preprocessing.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "7a079a62",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "8e592baa",
    "metadata": {},
    "outputs": [
@@ -39,9 +39,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Files in zip: ['selected.csv']\n",
+      "Files in zip: ['selected.csv', '__MACOSX/._selected.csv']\n",
       "✓ File saved as 'selected.csv'\n",
-      "Shape: (480796, 8)\n"
+      "Shape: (480796, 7)\n"
      ]
     },
     {
@@ -72,7 +72,6 @@
        "      <th>Police District</th>\n",
        "      <th>Latitude</th>\n",
        "      <th>Longitude</th>\n",
-       "      <th>Source</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -85,7 +84,6 @@
        "      <td>TARAVAL</td>\n",
        "      <td>37.707968</td>\n",
        "      <td>-122.463545</td>\n",
-       "      <td>Historical</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -96,7 +94,6 @@
        "      <td>MISSION</td>\n",
        "      <td>37.755900</td>\n",
        "      <td>-122.424435</td>\n",
-       "      <td>Historical</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -107,7 +104,6 @@
        "      <td>INGLESIDE</td>\n",
        "      <td>37.708311</td>\n",
        "      <td>-122.420084</td>\n",
-       "      <td>Historical</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -118,7 +114,6 @@
        "      <td>PARK</td>\n",
        "      <td>37.751998</td>\n",
        "      <td>-122.459032</td>\n",
-       "      <td>Historical</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -129,7 +124,6 @@
        "      <td>SOUTHERN</td>\n",
        "      <td>37.776930</td>\n",
        "      <td>-122.410809</td>\n",
-       "      <td>Historical</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -143,15 +137,15 @@
        "3    2013-11-02         10:06           2013                ARSON   \n",
        "4    2016-01-29         10:09           2016              WARRANT   \n",
        "\n",
-       "  Police District   Latitude   Longitude      Source  \n",
-       "0         TARAVAL  37.707968 -122.463545  Historical  \n",
-       "1         MISSION  37.755900 -122.424435  Historical  \n",
-       "2       INGLESIDE  37.708311 -122.420084  Historical  \n",
-       "3            PARK  37.751998 -122.459032  Historical  \n",
-       "4        SOUTHERN  37.776930 -122.410809  Historical  "
+       "  Police District   Latitude   Longitude  \n",
+       "0         TARAVAL  37.707968 -122.463545  \n",
+       "1         MISSION  37.755900 -122.424435  \n",
+       "2       INGLESIDE  37.708311 -122.420084  \n",
+       "3            PARK  37.751998 -122.459032  \n",
+       "4        SOUTHERN  37.776930 -122.410809  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
