Add figure explanations

--- a/code/denisa.ipynb
+++ b/code/denisa.ipynb
@@ -439,6 +439,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "94fdf8e5",
+   "metadata": {},
+   "source": [
+    "The figure above shows the pairwise correlations for the focus crimes chosen (DRUG OFFENSE, LIQUOR LAWS, MOTOR VEHICLE THEFT, ROBBERY, STOLEN PROPERTY, WARRANT)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "18877e18",
    "metadata": {},
    "source": [
@@ -537,6 +545,14 @@
     "             fontsize=16, fontweight='bold', y=0.995)\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5593bc18",
+   "metadata": {},
+   "source": [
+    "The figure above shows the pairwise correlations for the focus crimes chosen (DRUG OFFENSE, LIQUOR LAWS, MOTOR VEHICLE THEFT, ROBBERY, STOLEN PROPERTY, WARRANT) together with the regression line y=ax+b in red. Each of the plots is labeled with the corresponding y line."
    ]
   },
   {
@@ -651,6 +667,14 @@
     "             fontsize=16, fontweight='bold', y=0.995)\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09a8d26a",
+   "metadata": {},
+   "source": [
+    "The figure above shows the pairwise correlations for the focus crimes chosen (DRUG OFFENSE, LIQUOR LAWS, MOTOR VEHICLE THEFT, ROBBERY, STOLEN PROPERTY, WARRANT) together with the regression line y=ax+b in red. Each of the plots is labeled with the corresponding R squared value."
    ]
   },
   {
